# zipbrowser

./: Makefile.am  configure.ac
data/: Makefile.am  erbrowser.css  erbrowser.desktop  erbrowser.rc  erbrowser.schemas.in
doc/: Doxyfile.in
include/: Makefile.am  download.h  i18n.h  ipc.h  log.h  main.h  menu.h  metadata.h  view.h
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  de.po  el.po  en.po  erbrowser.pot  es.po  fr.po  it.po  make_language_po_files.sh  nl.po  ru.po  zh_CN.po
src/: Makefile.am  download.c  ipc.c  main.c  menu.c  metadata.c  view.c
