
schemasdir   = /etc/gconf/schemas
schemas_in_files = erbrowser.schemas.in
schemas_DATA     = $(schemas_in_files:.schemas.in=.schemas)
@INTLTOOL_SCHEMAS_RULE@


rcdir = $(datadir)/erbrowser
dist_rc_DATA =                          \
    erbrowser.rc                        \
    erbrowser.css                       \
    back.png                            \
    forward.png                         \
    emall-home.png                      \
    icon-back-small.png

